[package]
name = "cli"
version = "0.1.0"
authors = ["Veera <sveera.2001@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bessy = { path = "../compiler" }
# bessy = { git = "https://github.com/veera-sivarajan/bessy" }
